@@ -20,91 +20,89 @@ import java.util.List;
 
 public class ReactRolesCommand implements ServerCommand {
 
-	private boolean isEnabled;
+    private boolean isEnabled;
 
-	private final Logger log = LoggerFactory.getLogger(this.getClass());
+    private final Logger log = LoggerFactory.getLogger(this.getClass());
 
-	@Override
-	public String gethelp() {
-		String help = "Erstellt eine Reactionrole für die ausgewählte Nachricht mit dem ausgewählten Emote.\n - z.B. [prefix]reactrole #channel [messageId] :emote: @role";
-		return help;
-	}
+    @Override
+    public String getHelp() {
+        return "Erstellt eine Reactionrole für die ausgewählte Nachricht mit dem ausgewählten Emote.\n - z.B. [prefix]reactrole #channel [messageId] :emote: @role";
+    }
 
-	@Override
-	public String[] getCommandStrings() {
-		return new String[] { "reactrole" };
-	}
+    @Override
+    public String[] getCommandStrings() {
+        return new String[]{"reactrole"};
+    }
 
-	@Override
-	public HelpCategories getcategory() {
-		return HelpCategories.TOOLS;
-	}
+    @Override
+    public HelpCategories getCategory() {
+        return HelpCategories.TOOLS;
+    }
 
-	@Override
-	public void performCommand(Member m, GuildMessageChannel channel, Message message) {
+    @Override
+    public void performCommand(Member m, GuildMessageChannel channel, Message message) {
 
-		if (m.hasPermission(Permission.MANAGE_ROLES)) {
-			String[] args = message.getContentDisplay().split(" ");
+        if (m.hasPermission(Permission.MANAGE_ROLES)) {
+            String[] args = message.getContentDisplay().split(" ");
 
-			if (args.length == 5) {
+            if (args.length == 5) {
 
-				List<GuildMessageChannel> channels = message.getMentions().getChannels(GuildMessageChannel.class);
-				List<Role> roles = message.getMentions().getRoles();
-				List<CustomEmoji> emotes = message.getMentions().getCustomEmojis();
+                List<GuildMessageChannel> channels = message.getMentions().getChannels(GuildMessageChannel.class);
+                List<Role> roles = message.getMentions().getRoles();
+                List<CustomEmoji> emotes = message.getMentions().getCustomEmojis();
 
-				if (!channels.isEmpty() && !roles.isEmpty()) {
-					GuildMessageChannel tc = channels.get(0);
-					Role role = roles.get(0);
-					String MessageIdString = args[2];
+                if (!channels.isEmpty() && !roles.isEmpty()) {
+                    GuildMessageChannel tc = channels.getFirst();
+                    Role role = roles.getFirst();
+                    String MessageIdString = args[2];
 
-					try {
-						long MessageId = Long.parseLong(MessageIdString);
+                    try {
+                        long MessageId = Long.parseLong(MessageIdString);
 
-						if (!emotes.isEmpty()) {
-							CustomEmoji emote = emotes.get(0);
+                        if (!emotes.isEmpty()) {
+                            CustomEmoji emote = emotes.getFirst();
 
-							tc.addReactionById(MessageId, emote).queue();
+                            tc.addReactionById(MessageId, emote).queue();
 
-							LiteSQL.onUpdate(
-									"INSERT INTO reactroles(guildid, channelid, messageid, emote, roleid) VALUES(?, ?, ?, ?, ?);",
-									channel.getGuild().getIdLong(), tc.getIdLong(), MessageId, emote.getIdLong(),
-									role.getIdLong());
-						} else {
-							String utfemote = args[3];
-							tc.addReactionById(MessageId, Emoji.fromUnicode(utfemote)).queue();
+                            LiteSQL.onUpdate(
+                                    "INSERT INTO reactroles(guildid, channelid, messageid, emote, roleid) VALUES(?, ?, ?, ?, ?);",
+                                    channel.getGuild().getIdLong(), tc.getIdLong(), MessageId, emote.getIdLong(),
+                                    role.getIdLong());
+                        } else {
+                            String utfemote = args[3];
+                            tc.addReactionById(MessageId, Emoji.fromUnicode(utfemote)).queue();
 
-							LiteSQL.onUpdate(
-									"INSERT INTO reactroles(guildid, channelid, messageid, emote, roleid) VALUES(?, ?, ?, ?, ?);",
-									channel.getGuild().getIdLong(), tc.getIdLong(), MessageId, utfemote,
-									role.getIdLong());
-						}
-					}
-					catch (NumberFormatException e) {
-						log.error(e.getMessage(), e);
-					}
-				}
-			} else {
+                            LiteSQL.onUpdate(
+                                    "INSERT INTO reactroles(guildid, channelid, messageid, emote, roleid) VALUES(?, ?, ?, ?, ?);",
+                                    channel.getGuild().getIdLong(), tc.getIdLong(), MessageId, utfemote,
+                                    role.getIdLong());
+                        }
+                    } catch (NumberFormatException e) {
+                        log.error(e.getMessage(), e);
+                    }
+                }
+            } else {
 
-				SyntaxError.oncmdSyntaxError(new GenericMessageSendHandler(channel),
-						"reactrole [#channel] [messageId] [:emote:] [@role]", m);
-			}
-		} else {
-			PermissionError.onPermissionError(m, channel);
-		}
-	}
+                SyntaxError.oncmdSyntaxError(new GenericMessageSendHandler(channel),
+                        "reactrole [#channel] [messageId] [:emote:] [@role]", m);
+            }
+        } else {
+            PermissionError.onPermissionError(m, channel);
+        }
+    }
 
-	@Override
-	public boolean isEnabled() {
-		return isEnabled;
-	}
+    @Override
+    public boolean isEnabled() {
+        return isEnabled;
+    }
 
-	@Override
-	public void disableCommand() {
-		isEnabled = false;
-	}
+    @Override
+    public void disableCommand() {
+        isEnabled = false;
+    }
 
-	@Override
-	public void enableCommand() {
-		isEnabled = true;
-	}
+    @Override
+    public void enableCommand() {
+        isEnabled = true;
+    }
 }
